--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -98,19 +98,43 @@ h1 img {
   vertical-align: middle; /* keeps it aligned with text */
 }
 
-.CEO h2{
-  padding: 75px;
-  padding-left: 100px;
-  font-size: 2.8rem;
-  color: var(--main-dark-text-color);
-  margin-bottom: 50px;
+.CEO {
+  max-width: 1400px;
+  display: flex;
+  align-items: center;
+  gap: 20px;       
+  flex-wrap: wrap; 
+  padding: 75px; 
+  margin-left: 100px;
 }
 
-.CEO p {
-  padding: 25px;
-  padding-left: 100px;
-  max-width: 1000px; 
+.CEO h2{
+  font-size: 2.8rem;
+  color: var(--main-dark-text-color);
+  margin-bottom: 15px;
+  text-align: center; 
+}
+
+
+.ceo-content {
+  max-width: 1600px;
+  display: flex; 
+  align-items: center; 
+  gap: 25px;                
+  flex-wrap: wrap;  
+  justify-content: center; 
+}
+
+.ceo-content img {
+  width: clamp(200px, 300px, 400px);
+  height: auto;
+  border-radius: 20px;
+}
+
+.ceo-content p {
   font-size: 150%;
+  max-width: 800px;
+  line-height: 1.5;
 }
 
 .team h2 {
@@ -156,7 +180,8 @@ h1 img {
 }
 
 .member img {
-  width: 100%;
+  width: 235px; /*Images must be square!!!*/
+  height: 235px;
   height: auto;
   border-radius: 10px;
   margin-bottom: 15px;
@@ -194,6 +219,11 @@ button.toggle:hover {
 button.toggle:active {
   transform: translateY(1px);
   box-shadow: 0 10px 2px rgba(0, 0, 0, 0.2);
+}
+
+.Projects {
+  padding: 50px;
+  font-size: 250%;
 }
 
 /* Ensure proper sizing */
