--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -221,10 +221,51 @@ button.toggle:active {
   box-shadow: 0 10px 2px rgba(0, 0, 0, 0.2);
 }
 
+.projectHeader{
+  max-width: 1200px;
+  padding: 50px;
+  font-size: 150%;
+}
+
 .Projects {
   padding: 50px;
   font-size: 250%;
 }
+
+.projectBlock{
+  font-size: 50%;
+  display: block;
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+  max-width: 1200px;
+  padding: 50px;
+  margin-bottom: 100px;
+  border: 8px solid var(--alt-green-color);
+  border-radius: 10px;
+  text-decoration: none;
+  color: var(--main-dark-text-color);
+  transition: transform 0.1s, box-shadow 0.1s, border-color 0.1s;
+}
+
+.projectBlock:active{
+  transform: translateY(10px);
+  box-shadow: 0 10px 2px rgba(0, 0, 0, 0.2);
+}
+
+
+.projectBlock:hover{
+  border: 8px solid var(--alt-blue-color);
+  transform: translateY(-2px); 
+  box-shadow: 0 10px 4px rgba(0, 0, 0, 0.2);
+}
+
+.projectBlock img {
+  width: clamp(400px, 500px, 700px);
+  height: auto;
+  border-radius: 12px;
+}
+
 
 /* Ensure proper sizing */
 * {
