--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -15,7 +15,11 @@ html, body {
   font-family: 'Azeret Mono', monospace;
   background-color: var(--main-bg-color);
   color: var(--main-dark-text-color);
+
+  background: url('images/p6.webp') repeat 0 0;
 }
+
+
 
 ul { 
   position: fixed;
@@ -246,6 +250,7 @@ button.toggle:active {
   text-decoration: none;
   color: var(--main-dark-text-color);
   transition: transform 0.1s, box-shadow 0.1s, border-color 0.1s;
+  background: var(--main-bg-color);
 }
 
 .projectBlock:active{
@@ -283,7 +288,8 @@ button.toggle:active {
 /* Create two unequal columns that sits next to each other */
 /* Sidebar/left column */
 .side {
-   grid-column: 1;
+  background: url('images/p6.webp') repeat 0 0;
+  grid-column: 1;
   justify-self: start;
   width: 200px;
   background-color: var(--main-bg-color); 
@@ -292,6 +298,7 @@ button.toggle:active {
 
 /* Main column */
 .main {
+  background: url('images/p6.webp') repeat 0 0;
   grid-column: 2;
 
   max-width: 800px;
@@ -320,6 +327,17 @@ button.toggle:active {
   margin: 50px;
   text-align: center;
 }
+
+@keyframes fadeInUp {
+  from { opacity: 0; transform: translateY(20px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+
+ h2, p, img {
+  animation: fadeInUp 0.5s ease forwards;
+  opacity: 0; /* start hidden */
+}
+
 
 @media screen and (max-width: 700px) {
     .row {
@@ -350,5 +368,5 @@ button.toggle:active {
 .footer {
   padding: 20px; /* Some padding */
   text-align: center; /* Center text*/
-  background: var(--main-bg-color); 
+  background: url('images/p6.webp') repeat 0 0;
 }
