--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -248,25 +248,26 @@ button.toggle:active {
 
 .projectHeader{
   max-width: 1200px;
-  padding: 50px;
+  padding: 25px;
   font-size: 150%;
 }
 
 .Projects {
-  padding: 50px;
-  font-size: 250%;
+  padding: 25px;
+  font-size: 100%;
+  text-decoration: none;
 }
 
 .projectBlock{
-  font-size: 50%;
+  font-size: 100%;
   display: block;
   position: relative;
   overflow: hidden;
   cursor: pointer;
   max-width: 550px;
-  padding: 25px;
-  margin-bottom: 75px;
-  border: 8px solid var(--alt-green-color);
+  padding: 15px;
+  margin-bottom: 25px;
+  border: 2px solid var(--alt-green-color);
   border-radius: 10px;
   text-decoration: none;
   color: var(--main-dark-text-color);
@@ -281,14 +282,18 @@ button.toggle:active {
 
 
 .projectBlock:hover{
-  border: 8px solid var(--alt-blue-color);
+  border: 2px solid var(--alt-blue-color);
   transform: translateY(-8px); 
   box-shadow: 0 10px 4px rgba(0, 0, 0, 0.2);
 }
 
 .projectBlock img {
-  width: clamp(400px, 500px, 700px);
-  height: auto;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 100%;
+  height: 175px;
+  object-position: 50% 25%;
+  object-fit: cover;
   border-radius: 12px;
 }
 
