--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -104,23 +104,20 @@ h1 img {
   border-radius: 4px;
 }
 
-.blogWords h2 {
-  padding: 75px;
-  padding-bottom: 0px;
-  padding-top: 25px;
-  text-align: left;
+.blogWords {
   display: flex;
-  justify-content: space-between;
-  font-size: 200%;
+  flex-direction: column;
+  align-items: center;
 }
 
+.blogWords h2,
 .blogWords p {
-  padding: 75px;
-  padding-top: 0px;
-  padding-bottom: 25px;
-  display: flex;
-  justify-content: space-between;
+  max-width: 1000px;
+  width: 100%;
+  padding: 25px;
   font-size: 150%;
+  text-align: left;
+  box-sizing: border-box;
 }
 
 .CEO {
@@ -248,7 +245,7 @@ button.toggle:active {
 
 .projectHeader{
   max-width: 1200px;
-  padding: 25px;
+  padding: 75px;
   font-size: 150%;
 }
 
@@ -256,6 +253,10 @@ button.toggle:active {
   padding: 25px;
   font-size: 100%;
   text-decoration: none;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .projectBlock{
