--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -13,9 +13,9 @@ html, body {
   padding: 0;
 
   font-family: 'Azeret Mono', monospace;
+  font-kerning: normal;
   background: url('images/p6.webp') repeat 0 0;
   color: var(--main-dark-text-color);
-  /*background: url('images/p6.webp') repeat 0 0;*/
 }
 
 
@@ -362,6 +362,7 @@ button.toggle:active {
 .main p {
   width: 100%;       /* makes it shrink on smaller screens */
   font-size: 150%;
+  text-indent: 2em;
 }
 
 .main h2{
