--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -419,4 +419,6 @@ button.toggle:active {
   padding: 20px; /* Some padding */
   text-align: center; /* Center text*/
   background: url('images/p6.webp') repeat 0 0;
+  padding-bottom: 0px;
+  margin-bottom: 0px;
 }
