--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -18,7 +18,7 @@ html, body {
   font-family: 'Azeret Mono', monospace;
   font-kerning: normal;
   text-indent: 2em;
-  letter-spacing: 2.25px;
+  letter-spacing: 2.1px;
 
   background-color: var(--main-bg-color);
 
@@ -371,7 +371,7 @@ button.toggle:active {
   
   background-color: var(--main-bg-color);
   border-radius: 12px;
-  
+
   max-width: 800px;
   
   flex: 1;
@@ -386,7 +386,7 @@ button.toggle:active {
 }
 
 .main p {
-  width: 100%;       /* makes it shrink on smaller screens */
+  width: 100%;
   font-size: 150%;
 }
 
