--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -286,6 +286,19 @@ button.toggle:active {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  background-image: url('images/PKIExport.png');
+  background-repeat: repeat;
+  background-size: 512px 512px;
+  image-rendering: pixelated;
+  background-attachment: fixed;
+}
+
+.Projects h2 {
+  background: var(--main-bg-color);
+  text-indent: 0;
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .projectBlock{
