--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -108,7 +108,7 @@ h1 img {
   padding-top: 50px;
   width: clamp(200px, 600px, 800px); 
   height: auto;
-  vertical-align: middle; /* keeps it aligned with text */
+  vertical-align: middle;
   border-radius: 4px;
   image-rendering: auto;
 }
