--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -27,6 +27,10 @@ html, body {
 
 }
 
+h1, h2{
+  text-indent: 0px;
+}
+
 ul { 
   text-indent: 0;
   position: fixed;
@@ -480,4 +484,5 @@ button.toggle:active {
   padding: 20px; /* Some padding */
   text-align: center; /* Center text*/
   margin-bottom: 0px;
+  text-indent: 0px;
 }
