--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -355,12 +355,23 @@ button.toggle:active {
   padding-left: 0px;
   padding-right: 0px;
   width: 100%;
-  height: 175px;
+  max-height: 175px;
   object-position: 50% 25%;
   object-fit: cover;
   border-radius: 12px;
 }
 
+.BlogPromo img {
+  width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+
+  border-radius: 12px;
+
+  padding: 0;
+
+  display: block;
+}
 
 /* Ensure proper sizing */
 * {
