--- a/PKIndustries.css
+++ b/PKIndustries.css
@@ -149,6 +149,7 @@ h1 img {
   max-width: 80%;
   border-radius: 12px;
 
+  border: 2px solid var(--main-bg-dark-color);
 }
 
 .CEO {
@@ -374,6 +375,8 @@ button.toggle:active {
   object-fit: cover;
 
   border-radius: 12px;
+  border: 2px solid var(--main-bg-dark-color);
+  object-position: 50% 0%;
 
   padding: 0;
 
